--- a/postgresql/tasks/main.yml
+++ b/postgresql/tasks/main.yml
@@ -2,4 +2,6 @@
   sudo: yes
   apt: pkg={{ item }} state=installed
   with_items:
-      - postgresql
+    - libpq-dev # Required for Ansible to interact with postgres
+    - python-psycopg2 # Required for Ansible to interact with postgres
+    - postgresql
