--- a/common/tasks/main.yml
+++ b/common/tasks/main.yml
@@ -1,16 +1,6 @@
-- name: Add twer user
+- name: Update source list file to sohu
   sudo: yes
-  user: 
-    name=twer 
-    password=$6$8VBB.474$zN27HSpM0WA6rK6ir8HwRSWviX.cBiEyhRI4ZF7JBrxo/5v0BhvXw9EDrgSH6N2cqLzVPSTTSqwromw0chroo0
-    shell=/bin/bash
-
-- name: Sync private key of twer
-  sudo: yes
-  authorized_key: 
-    user=twer 
-    key="{{ lookup('file', 'id_rsa.pub') }}"
-
+  copy: src=sources.list dest=/etc/apt/sources.list
 
 - name: Set local time zone
   sudo: yes
@@ -24,6 +14,9 @@
   sudo: yes
   apt: pkg={{ item }} state=installed
   with_items:
+      - libpq-dev # Required for Ansible to interact with postgres
+      - python-psycopg2 # Required for Ansible to interact with postgres
       - git
       - tree
       - unzip
+      
