--- a/kafka/setup/vars/main.yml
+++ b/kafka/setup/vars/main.yml
@@ -1,6 +1,8 @@
-kafka_file: kafka_2.10-0.8.2.2.tgz
+kafka_file: kafka_2.10-0.9.0.1.tgz
 temp_dir: /var/kafka
 install_dir: /usr/share/kafka
 
 kafka_user: vagrant
 kafka_group: vagrant
+
+number_partitions: 1
