--- a/kafka/stop/tasks/main.yml
+++ b/kafka/stop/tasks/main.yml
@@ -1,5 +1,6 @@
 - name: Stop kafka
-  shell: /usr/share/kafka/bin/kafka-server-stop.sh
-    
+  sudo: yes
+  shell: /usr/share/kafka/bin/kafka-stop.sh
+
 - name: Check kafka has been stoped
   wait_for: port=9092 state=stopped
