--- a/kafka/setup/templates/server.properties
+++ b/kafka/setup/templates/server.properties
@@ -14,9 +14,15 @@
 # limitations under the License.
 # see kafka.server.KafkaConfig for additional details and defaults
 
-############################# Server Basics #############################
-default.replication.factor=2
+################## Customized Properties ###################
+default.replication.factor=3
 
+# Enable deleting topic by operation command
+delete.topic.enable=true
+
+controlled.shutdown.enable=true
+
+############################# Server Basics #############################
 
 # The id of the broker. This must be set to a unique integer for each broker.
 broker.id={{id}}
